Fixed cookie banner alignment

--- a/assets/cookieBanner/banner.css
+++ b/assets/cookieBanner/banner.css
@@ -18,6 +18,10 @@
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 .gdpr-banner__column {
